Completed sign-in, sign-up, and sign-out
Finished implementing authorization functionality

--- a/index.html
+++ b/index.html
@@ -13,5 +13,27 @@
     </head>
     <body>
       <h1>Browser Template</h1>
+      <!--Sign Up-->
+      <h3>Sign Up!</h3>
+      <form id="sign-up-form">
+        <input name="credentials[email]" type="email" placeholder="mail@email.com">
+        <input name="credentials[password]" type="password" placeholder="Password">
+        <input name="credentials[password_confirmation]" type="password" placeholder="Confirm Password">
+        <button type="submit">Sign Up</button>
+      </form>
+      <!--Sign In-->
+      <form id="sign-in-form">
+        <h3>Sign In</h3>
+        <input name="credentials[email]" type="email" placeholder="mail@email.com">
+        <input name="credentials[password]" type="password" placeholder="Password">
+        <button type="submit">Sign In</button>
+      </form>
+      <!--Div for Auth Messages-->
+      <section id="auth-display"></section>
+      <!--Sign Out-->
+      <h3 class="sign-out">Sign Out</h3>
+      <button class="sign-out">Sign Out</button>
+
+
     </body>
 </html>
