Added Game Review Create Functionality

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
       <h3 class="sign-out">Sign Out</h3>
       <button class="sign-out">Sign Out</button>
 
+      <h1>Game Reviews</h1>
+      <!--Create New Review-->
+      <form id="create-game-review-form">
+        <h3>Create Game Review</h3>
+        <input name= "game[title]" type="text" placeholder="Game Title">
+        <input name="game[description]" type="text" placeholder="Add a Description (optional)" size="40">
+        <input name="game[rating]" type="text" placeholder="Enter a Number Rating" size="19">
+        <button type="submit">Submit</button>
+      </form>
+      
+      
+
 
     </body>
 </html>
