Added Game Message Functionality

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         <input name="game[rating]" type="text" placeholder="Enter a Number Rating" size="19">
         <button type="submit">Submit</button>
       </form>
+      <!--Div for Game Messages-->
+      <section id="game-display"></section>
       
       
 
