Added Show One Review and Delete Review

--- a/index.html
+++ b/index.html
@@ -45,8 +45,18 @@
       </form>
       <!--Div for Game Messages-->
       <section id="game-display"></section>
-      
-      
+      <!--Button for Indexing Game Reviews-->
+      <button id="game-index">Show All Reviews</button>
+      <!--Button for Showing one Game Review-->
+      <form id="show-game-review-form">
+        <input name="game[id]" type="text" placeholder="Enter Review ID">
+        <button id="game-show">Show One Review</button>
+      </form>
+      <!--Form For Deleting Review-->
+      <form id="delete-game-review-form">
+        <input name="game[id]" type="text" placeholder="Enter Review ID">
+        <button id="game-delete">Delete review</button>
+      </form>
 
 
     </body>
