--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <h3>A Place To Keep Reviews For Your Games!</h3>
 
       <!--Sign Up-->
-      <h3>Sign Up!</h3>
-      <form id="sign-up-form">
+      <h3 class="logged-out">Sign Up!</h3>
+      <form class="logged-out" id="sign-up-form">
         <input name="credentials[email]" type="email" placeholder="mail@email.com">
         <input name="credentials[password]" type="password" placeholder="Password">
         <input name="credentials[password_confirmation]" type="password" placeholder="Confirm Password">
@@ -25,15 +25,16 @@
       </form>
 
       <!--Sign In-->
-      <form id="sign-in-form">
-        <h3>Sign In</h3>
+      <h3 class="logged-out">Sign In</h3>
+      <form class="logged-out" id="sign-in-form">       
         <input name="credentials[email]" type="email" placeholder="mail@email.com">
         <input name="credentials[password]" type="password" placeholder="Password">
         <button type="submit">Sign In</button>
       </form>
 
       <!--Change Password-->
-        <form id="change-password-form">
+      <h4 class="logged-in">Change Password</h4>
+        <form class="logged-in" id="change-password-form">
           <input name="passwords[old]" type="password" placeholder="Old Password">
           <input name="passwords[new]" type="password" placeholder="New Password">
           <button type="submit">Update</button>
