--- a/index.html
+++ b/index.html
@@ -6,50 +6,71 @@
 
       <!-- Do not add `link` tags-->
       <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap" rel="stylesheet">
 
       <!-- Do not add `script` tags-->
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
+      <section class="blue">
       <h1>GR1</h1>
       <h3>A Place To Keep Reviews For Your Games!</h3>
+      <div class="curve"></div>
+      </section>
+
+      <!--Div for Auth Messages-->
+        <section id="auth-display"></section>
+
+      <!--Div for Game Messages-->
+        <section class="all-game-review" id="game-display"></section>
 
       <!--Sign Up-->
-      <h3 class="logged-out">Sign Up!</h3>
+      <section>
+
       <form class="logged-out" id="sign-up-form">
         <input name="credentials[email]" type="email" placeholder="mail@email.com">
         <input name="credentials[password]" type="password" placeholder="Password">
         <input name="credentials[password_confirmation]" type="password" placeholder="Confirm Password">
         <button type="submit">Sign Up</button>
       </form>
+      </section>
 
       <!--Sign In-->
-      <h3 class="logged-out">Sign In</h3>
+      <section>
+    
       <form class="logged-out" id="sign-in-form">       
         <input name="credentials[email]" type="email" placeholder="mail@email.com">
         <input name="credentials[password]" type="password" placeholder="Password">
         <button type="submit">Sign In</button>
       </form>
+      </section>
 
       <!--Change Password-->
-      <h4 class="logged-in">Change Password</h4>
-        <form class="logged-in" id="change-password-form">
-          <input name="passwords[old]" type="password" placeholder="Old Password">
-          <input name="passwords[new]" type="password" placeholder="New Password">
-          <button type="submit">Update</button>
-        </form>
+      <header>
+        <h4 class="logged-in">Change Password</h4>
+          <form class="logged-in" id="change-password-form">
+            <input name="passwords[old]" type="password" placeholder="Old Password">
+            <input name="passwords[new]" type="password" placeholder="New Password">
+            <button type="submit">Update</button>
+          </form>
+        </header>
 
-      <!--Div for Auth Messages-->
-      <section id="auth-display"></section>
 
       <!--Sign Out-->
+      <section>
       <h3 class="sign-out">Sign Out</h3>
       <button class="sign-out" id="sign-out">Sign Out</button>
+      </section>
 
+      <section>
       <h4 class="all-game-review">Your Reviews</h4>
+      </section>
 
       <!--Create New Review-->
+      <section>
       <form class="all-game-review" id="create-game-review-form">
         <h3>Create Game Review</h3>
         <input name= "game[title]" type="text" placeholder="Game Title">
@@ -57,18 +78,22 @@
         <input name="game[rating]" type="text" placeholder="Enter a Number Rating" size="19">
         <button type="submit">Submit</button>
       </form>
+      </section>
 
-      <!--Div for Game Messages-->
-      <section class="all-game-review" id="game-display"></section>
+
 
       <!--Button for Indexing Game Reviews-->
+      <section>
       <button class="all-game-review" id="game-index">Show All Reviews</button>
+      </section>
 
       <!--Button for Showing one Game Review-->
+      <section>
       <form class="all-game-review" id="show-game-review-form">
         <input name="game[id]" type="text" placeholder="Enter Review ID">
         <button id="game-show">Show One Review</button>
       </form>
+      </section>
 
       <!--Form For Deleting Review-->
       <!-- <form id="delete-game-review-form">
@@ -84,7 +109,6 @@
         <input name="game[rating]" type="text" placeholder="Enter a Number Rating" size="19">
         <button type="submit">Edit</button>
       </form> -->
-
       <!--Section For mongoDb -->
       <section class="all-game-review" id="game-reviews"></section>
 
